# monero-rpc-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  RELEASING.md  dprint.json
.beads/: issues.jsonl
.beads/.br_history/: issues.20260314_062143_035049335.jsonl  issues.20260314_062321_699453566.jsonl  issues.20260314_062321_699453566.jsonl.meta.json
.claude/: settings.local.json
.github/workflows/: build.yml  create-release.yml  draft-new-release.yml  format.yml  main.yml  release-to-crates-io.yml  test.yml
src/: client.rs  lib.rs  models.rs  util.rs
tests/: Mac.Dockerfile  docker-compose.yml  rpc.rs
tests/certificates/: README.md  monero_client.crt  monero_client.key  monero_client.pfx  monero_gen_server.crt  monero_gen_server.key  monero_gen_server.pfx  monero_openssl_no_cn_server.crt  monero_openssl_no_cn_server.key  monero_openssl_with_cn_server.crt  monero_openssl_with_cn_server.key
tests/clients_tests/: all_clients_interaction.rs  basic_daemon_rpc.rs  basic_wallet.rs  empty_blockchain.rs  mod.rs  non_empty_blockchain.rs
tests/clients_tests/helpers/: daemon_rpc.rs  mod.rs  regtest.rs  wallet.rs
tests/common/: mod.rs
tests/common/helpers/: mod.rs  regtest.rs  wallet.rs
tests/common/main_tests/: all_clients_interaction.rs  basic_daemon_rpc.rs  basic_wallet.rs  empty_blockchain.rs  mod.rs  non_empty_blockchain.rs
tests/main_tests/: all_clients_interaction.rs  basic_daemon_rpc.rs  basic_wallet.rs  empty_blockchain.rs  mod.rs  non_empty_blockchain.rs
tests/main_tests/helpers/: daemon_rpc.rs  mod.rs  regtest.rs  wallet.rs
