[package]
name = "monero-rpc"
version = "0.5.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>", "Monero Rust Contributors"]
edition = "2021"
exclude = ["/test"]
keywords = ["asynchronous", "net", "monero", "rpc"]
license = "Apache-2.0"
repository = "https://github.com/monero-rs/monero-rpc-rs"
rust-version = "1.66.0"
description = "RPC client for Monero daemon and wallet"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
diqwest = { version = "3.0.0", default-features = false, optional = true }
fixed-hash = "0.8"
hex = "0.4"
jsonrpc-core = "18"
monero = { version = "0.21", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
# Async
rand = "0.8.4"
rustc-hex = "2.1"
serde_test = "1.0"
tokio = { version = "1.12.0", features = ["full"] }

[features]
default = ["native-tls"]

rpc_authentication = ["diqwest"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
